<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.LoginFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:hint="@string/user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:textSize="17sp"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineSpacingExtra="20sp"
            android:text="@string/forgot_password"
            android:textColor="@color/multiple_image_select_primary"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="@id/password_layout"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />

        <TextView
            android:id="@+id/verify"
            android:textColor="@color/multiple_image_select_primary"
            android:textSize="18sp"
            android:text="@string/verify"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/forgotPassId"
            app:layout_constraintLeft_toLeftOf="@id/forgotPassId"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:lineSpacingExtra="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorAccent"
            android:lineSpacingExtra="17sp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/verify"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="#7e7e7e"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/login_with_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="-8sp"
            android:text="@string/log_in_with"
            android:textColor="#222222"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/or_tv"
            app:layout_constraintLeft_toLeftOf="@id/btnLogin" />



        <ImageView
            android:id="@+id/google_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/g_button"
            app:layout_constraintTop_toBottomOf="@id/login_with_tv"
            app:layout_constraintLeft_toLeftOf="@id/btnLogin"
            app:layout_constraintRight_toRightOf="@id/btnLogin" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>