<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@android:color/white"
    android:splitMotionEvents="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/heading"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:padding="20dp"
            android:text="@string/message"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/multiple_image_select_primary"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>