<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="25dp"
    tools:context=".fragment.SignupFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="150dp">

        <TextView
            android:id="@+id/create_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="-8sp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/name_layout"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Create your account " />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12.5dp"
            android:layout_weight="1"
            android:hint="@string/first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_tv">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:lineSpacingExtra="20sp"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginTop="12.5dp"
            android:layout_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_tv">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textVisiblePassword"
                android:lineSpacingExtra="20sp"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12.5dp"
            android:layout_weight="1"
            android:hint="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_weight="1"
            android:hint="@string/mobile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_layout">


            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="12.5dp"
            android:layout_weight="1"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="12.5dp"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout">


            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:lineSpacingExtra="17sp"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_layout" />
        <Button
            android:visibility="gone"
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:lineSpacingExtra="17sp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_layout" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>